# teeFinder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.example.yaml
teefinder/: __init__.py  __main__.py  accounts.py  cli.py  config.py  diff.py  matching.py  models.py  notifier.py  runner.py  scheduler.py  storage.py
teefinder/scrapers/: __init__.py  base.py  fixture.py  miclub.py
teefinder/web/: __init__.py  app.py  auth_routes.py  deps.py  views.py
teefinder/web/static/: style.css
teefinder/web/templates/: base.html  dashboard.html  login.html  preferences.html  register.html
tests/: test_accounts.py  test_config.py  test_diff.py  test_matching.py  test_runner.py  test_scrapers.py  test_storage.py  test_web.py
tests/fixtures/: demo_slots.json  miclub_calendar.html  miclub_timesheet.html
