[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teefinder"
version = "0.1.0"
description = "Alerts you when new tee times become available at your golf clubs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
teefinder = "teefinder.cli:app"

[tool.setuptools.packages.find]
include = ["teefinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
