[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teefinder"
version = "0.1.0"
description = "Alerts you when new tee times become available at your golf clubs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
teefinder = "teefinder.cli:app"

[tool.setuptools.packages.find]
include = ["teefinder*"]

[tool.setuptools.package-data]
# Ship the web templates and static assets with the installed package so the
# app works from a normal (non-editable) install, e.g. inside a Docker image.
"teefinder.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
